set to avoid page breaks in img, ol, ul

--- a/week08/trustedFriendsDaycare/tf_print.css
+++ b/week08/trustedFriendsDaycare/tf_print.css
@@ -88,6 +88,10 @@ article:nth-of-type(n+2) {
    page-break-before: always;
 }
 
+img, ol, ul {
+   page-break-inside: avoid;
+}
+
 
 
 	
